--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.13.3",
+    "lightweight-charts": "^5.1.0",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3"
