--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -16,7 +16,10 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@types/uuid": "^10.0.0",
     "cors": "^2.8.6",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "redis": "^5.10.0",
+    "uuid": "^13.0.0"
   }
 }
