--- a/backend/engine/package.json
+++ b/backend/engine/package.json
@@ -14,5 +14,8 @@
   "dependencies": {
     "@types/redis": "^4.0.10",
     "redis": "^5.10.0"
+  },
+  "devDependencies": {
+    "@types/node": "^25.2.2"
   }
 }
